# IceCubes

./: .gitignore  BUILD.md  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  UNIVERSAL_BINARY_SETUP.md  create-test-note.js  env.example  generate-large-test.js  insert-3k-note.js  insert-large-test-note.js  insert-test-note.js  package-lock.json  package.json  reset-permissions.sh  test-cache-verification.js  test-chunking.js  test-electron-app.js  test-electron-context.js  test-llm.js  test-native-module-integration.js  test-parakeet-download-full.js  test-parakeet-download.js  test-parakeet-integration.js  test-qwen-download.js  test-qwen-progress-ui.js  tsconfig.json  tsconfig.main.json  vite.config.ts
assets/: icon.icns
docs/: CNAME  index.html
docs/IceCubes/: index.html
scripts/: build-and-release.sh  notarize.js  seed-test-notes.js  set-google-keys.sh
src-native/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
src-native/src/: audio.rs  embedding.rs  lib.rs  llm.rs  parakeet.rs  window.rs
src-native/src/macos/: accessibility.rs  audio.rs  mic_monitor.rs  mod.rs  permissions.rs  window.rs
src-native/src/windows_impl/: accessibility.rs  audio.rs  mod.rs  window.rs
src/main/: ai-router.ts  audio-engine.ts  calendar.ts  database.ts  folders.ts  google-config.ts  index.ts  llm-worker.ts  meeting-watcher.ts  openai.ts  preload.ts  templates.ts  transcription.ts  vector-search.ts
src/renderer/: App.css  App.tsx  editor.html  index.html  indicator.html  main.tsx  meeting-bar.html  settings.html
(+3 files in other folders)
