[package]
name = "ghost-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "napi6"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
  "Win32_Graphics_Dwm",
  "Win32_Media_Audio",
  "Win32_System_Com",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
